--- a/src/Board.css
+++ b/src/Board.css
@@ -1,5 +1,29 @@
 .Board {
-  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 0 25px #fff, -10px 0 40px #f0f, 10px 0 40px #0ff;
+  margin: 0 15px;
+}
+
+@media only screen and (min-width: 600px) {
+  .Board {
+    margin: 0 auto;
+  }
+}
+
+.Board tr:first-child td:first-child {
+  border-radius: 8px 0 0 0;
+}
+
+.Board tr:first-child td:last-child {
+  border-radius: 0 8px 0 0;
+}
+
+.Board tr:last-child td:first-child {
+  border-radius: 0 0 0 8px;
+}
+
+.Board tr:last-child td:last-child {
+  border-radius: 0 0 8px 0; 
 }
 
 @font-face {
@@ -17,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 } 
 
 .neon-orange {
