--- a/src/Board.css
+++ b/src/Board.css
@@ -49,9 +49,9 @@
   color: #FB4264;
   font-size: 2.5em;
   text-shadow: 0 0 3vw #F40A35;
-  animation: neon-orange 4s ease infinite;
-  -moz-animation: neon-orange 4s ease infinite;
-  -webkit-animation: neon-orange 4s ease infinite;
+  animation: neon-orange 3.5s ease infinite;
+  -moz-animation: neon-orange 3.5s ease infinite;
+  -webkit-animation: neon-orange 3.5s ease infinite;
 }
 
 @media only screen and (min-width: 500px) {
@@ -86,6 +86,28 @@
 @media only screen and (min-width: 800px) {
   .neon-blue {
     font-size: 5em;
+  }
+}
+
+.winner .neon-orange, .winner .neon-blue {
+  font-size: 4em;
+}
+
+.winner .neon-orange {
+  animation: neon-orange 1s ease infinite;
+  -moz-animation: neon-orange 1s ease infinite;
+  -webkit-animation: neon-orange 1s ease infinite;
+}
+
+@media only screen and (min-width: 500px) {
+  .winner .neon-orange, .winner .neon-blue {
+    font-size: 6em;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .winner .neon-orange, .winner .neon-blue {
+    font-size: 7em;
   }
 }
 
